package br.unitins.topicos1.sga.dto;

public record UsuarioDTO (
    String login,
    String senha,
    int idPerfil
) {

}
